--- a/contributions.Rmd
+++ b/contributions.Rmd
@@ -35,7 +35,14 @@ library(reshape2)
 ```{r echo=FALSE, Load_the_Data}
 # Load the Data
 ctrbs <- read.csv('ctrbsTX.csv',
-                  row.names = NULL)
+                  row.names = NULL,
+                  header = TRUE)
+
+ctrbs_headers <- colnames(ctrbs)[-1]
+
+ctrbs <- ctrbs[,-19]
+
+colnames(ctrbs) <- ctrbs_headers
 ```
 
 > **Tip**: Before you create any plots, it is a good idea to provide a short
