--- a/contributions.Rmd
+++ b/contributions.Rmd
@@ -124,6 +124,34 @@ str(Data$contb_receipt_dt)
 
  contb_receipt_dt types of values are changed to date.
 
+ Now I'm going to get univariate plots.
+ 
+```{r echo=FALSE, Univariate_Plots}
+
+# First, I'm going to show the distribution of the count of contributions for each candidates.
+name_counts <- as.data.frame(sort(table(Data$cand_nm, dnn = list('name')),
+                                  decreasing = T),
+                             responseName = 'count')
+
+name_counts
+
+# Show the counts.
+ggplot(aes(x = name, y = count),
+       data = name_counts) +
+  geom_bar(stat = 'identity') +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1))
+
+# Show the percentages.
+ggplot(aes(x = name, y = count/sum(count)),
+       data = name_counts) +
+  geom_bar(stat = 'identity') +
+  scale_y_continuous(labels = percent_format()) +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1))
+
+```
+
+  Clinton got the most number of contributions. After her, Cruz, Sanders, Trump, Carson, etc. follow. When change the counts to percentages, Clinton got about 38% and Cruz, Sanders, Trump and Carson followed by about 25%, 15%, 14%, 5% each.
+
 > **Tip**: Make sure that you leave a blank line between the start / end of
 each code block and the end / start of your Markdown text so that it is
 formatted nicely in the knitted text. Note as well that text on consecutive
